--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -30,9 +30,11 @@ force_cast: warning
 force_try: warning
 line_length: 140
 type_body_length:
+  ignores_comments: true
   warning: 200
   error: 400
 file_length:
+  ignores_comments: true
   warning: 300
   error: 500
 type_name:
